@startuml

entity "Customer" {
  + ID : SERIAL
  --
  Name VARCHAR(255)
  ~ Email VARCHAR(255)
  Document VARCHAR(255)
  Password VARCHAR(255)
  CreatedAt TIMESTAMP WITH TIME ZONE
}

entity "Product" {
  + ID : SERIAL
  --
  Name VARCHAR(255)
  Description VARCHAR(500)
  Price DECIMAL(16, 6)
  ~ Category VARCHAR(255)
  Status INT
  Imagepath VARCHAR(255)
}

entity "Payment" {
  + ID : SERIAL
  --
  PaymentType INT
  CreatedAt TIMESTAMP WITH TIME ZONE
  Status INT
}

entity "Order" {
  + ID : SERIAL
  --
  CustomerID INT
  PaymentID INT
  ~ Status INT
  CreatedAt TIMESTAMP WITH TIME ZONE
  UpdatedAt TIMESTAMP WITH TIME ZONE
  Total DECIMAL(16, 6)
}

entity "Order_Items" {
  + OrderID INT
  + ProductID INT
  Quantity INT
}

Customer ||--o{ Order : CustomerID
Order ||--o{ Payment : PaymentID
Order ||--{ Order_Items : OrderID
Product ||--{ Order_Items : ProductID

@enduml